// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "medium", weight: regular and theme: dark 1`] = `
":host {
  display: block;
  position: relative !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a),::slotted(button) {
  margin: 0 0 4px 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 4px !important;
  background: transparent !important;
  display: inline-block !important;
  position: relative !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: nowrap !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: start !important;
  border: 0 !important;
  color: #FBFCFF !important;
  cursor: pointer !important;
  z-index: 0 !important;
}
::slotted(a)::after,::slotted(button)::after {
  content: "" !important;
  visibility: hidden !important;
}
::slotted(a[aria-selected="true"])::after, ::slotted(a[aria-current="true"])::after,::slotted(button[aria-selected="true"])::after, ::slotted(button[aria-current="true"])::after {
  position: absolute !important;
  height: 2px !important;
  left: 0 !important;
  background: #FBFCFF !important;
  right: 0px !important;
  bottom: -6px !important;
  visibility: visible !important;
}
::slotted(a:focus:focus-visible)::before,::slotted(button:focus:focus-visible)::before {
  border: 2px solid #1A44EA !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-inline-end: 16px !important;
}
@media(hover:hover) {
  ::slotted(a)::before, ::slotted(button)::before {
    content: "" !important;
    position: absolute !important;
    inset: -2px -4px !important;
    border-radius: 4px !important;
    z-index: -1 !important;
    transition: background-color var(--p-transition-duration, .24s) ease !important;
  }
  ::slotted(a:hover)::before,::slotted(button:hover)::before {
    -webkit-backdrop-filter: blur(32px) !important;
    backdrop-filter: blur(32px) !important;
    background: rgba(148, 149, 152, .18) !important;
  }
}

.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
}
.scroller--animated ::slotted(a[aria-selected="true"])::after, .scroller--animated ::slotted(a[aria-current="true"])::after, .scroller--animated ::slotted(button[aria-selected="true"])::after, .scroller--animated ::slotted(button[aria-current="true"])::after {
  transition: visibility 0s linear .4s !important;
}
.bar {
  position: absolute;
  height: 2px;
  left: 0;
  background: #FBFCFF;
  width: 0;
  bottom: -2px;
  visibility: visible;
  transition: transform .4s,width .4s;
  animation: keyframes-hide 0s .5s forwards;
}
@keyframes keyframes-hide {
  to {
    visibility: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", weight: regular and theme: light 1`] = `
":host {
  display: block;
  position: relative !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a),::slotted(button) {
  margin: 0 0 4px 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 4px !important;
  background: transparent !important;
  display: inline-block !important;
  position: relative !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: nowrap !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: start !important;
  border: 0 !important;
  color: #010205 !important;
  cursor: pointer !important;
  z-index: 0 !important;
}
::slotted(a)::after,::slotted(button)::after {
  content: "" !important;
  visibility: hidden !important;
}
::slotted(a[aria-selected="true"])::after, ::slotted(a[aria-current="true"])::after,::slotted(button[aria-selected="true"])::after, ::slotted(button[aria-current="true"])::after {
  position: absolute !important;
  height: 2px !important;
  left: 0 !important;
  background: #010205 !important;
  right: 0px !important;
  bottom: -6px !important;
  visibility: visible !important;
}
::slotted(a:focus:focus-visible)::before,::slotted(button:focus:focus-visible)::before {
  border: 2px solid #1A44EA !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-inline-end: 16px !important;
}
@media(hover:hover) {
  ::slotted(a)::before, ::slotted(button)::before {
    content: "" !important;
    position: absolute !important;
    inset: -2px -4px !important;
    border-radius: 4px !important;
    z-index: -1 !important;
    transition: background-color var(--p-transition-duration, .24s) ease !important;
  }
  ::slotted(a:hover)::before,::slotted(button:hover)::before {
    -webkit-backdrop-filter: blur(32px) !important;
    backdrop-filter: blur(32px) !important;
    background: rgba(148, 149, 152, .18) !important;
  }
}

.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
}
.scroller--animated ::slotted(a[aria-selected="true"])::after, .scroller--animated ::slotted(a[aria-current="true"])::after, .scroller--animated ::slotted(button[aria-selected="true"])::after, .scroller--animated ::slotted(button[aria-current="true"])::after {
  transition: visibility 0s linear .4s !important;
}
.bar {
  position: absolute;
  height: 2px;
  left: 0;
  background: #010205;
  width: 0;
  bottom: -2px;
  visibility: visible;
  transition: transform .4s,width .4s;
  animation: keyframes-hide 0s .5s forwards;
}
@keyframes keyframes-hide {
  to {
    visibility: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", weight: regular and theme: dark 1`] = `
":host {
  display: block;
  position: relative !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a),::slotted(button) {
  margin: 0 0 4px 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 4px !important;
  background: transparent !important;
  display: inline-block !important;
  position: relative !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: nowrap !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: start !important;
  border: 0 !important;
  color: #FBFCFF !important;
  cursor: pointer !important;
  z-index: 0 !important;
}
::slotted(a)::after,::slotted(button)::after {
  content: "" !important;
  visibility: hidden !important;
}
::slotted(a[aria-selected="true"])::after, ::slotted(a[aria-current="true"])::after,::slotted(button[aria-selected="true"])::after, ::slotted(button[aria-current="true"])::after {
  position: absolute !important;
  height: 2px !important;
  left: 0 !important;
  background: #FBFCFF !important;
  right: 0px !important;
  bottom: -6px !important;
  visibility: visible !important;
}
::slotted(a:focus:focus-visible)::before,::slotted(button:focus:focus-visible)::before {
  border: 2px solid #1A44EA !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-inline-end: 16px !important;
}
@media(hover:hover) {
  ::slotted(a)::before, ::slotted(button)::before {
    content: "" !important;
    position: absolute !important;
    inset: -2px -4px !important;
    border-radius: 4px !important;
    z-index: -1 !important;
    transition: background-color var(--p-transition-duration, .24s) ease !important;
  }
  ::slotted(a:hover)::before,::slotted(button:hover)::before {
    -webkit-backdrop-filter: blur(32px) !important;
    backdrop-filter: blur(32px) !important;
    background: rgba(148, 149, 152, .18) !important;
  }
}

.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1rem;
}
.scroller--animated ::slotted(a[aria-selected="true"])::after, .scroller--animated ::slotted(a[aria-current="true"])::after, .scroller--animated ::slotted(button[aria-selected="true"])::after, .scroller--animated ::slotted(button[aria-current="true"])::after {
  transition: visibility 0s linear .4s !important;
}
.bar {
  position: absolute;
  height: 2px;
  left: 0;
  background: #FBFCFF;
  width: 0;
  bottom: -2px;
  visibility: visible;
  transition: transform .4s,width .4s;
  animation: keyframes-hide 0s .5s forwards;
}
@keyframes keyframes-hide {
  to {
    visibility: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", weight: regular and theme: light 1`] = `
":host {
  display: block;
  position: relative !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a),::slotted(button) {
  margin: 0 0 4px 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 4px !important;
  background: transparent !important;
  display: inline-block !important;
  position: relative !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: nowrap !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: start !important;
  border: 0 !important;
  color: #010205 !important;
  cursor: pointer !important;
  z-index: 0 !important;
}
::slotted(a)::after,::slotted(button)::after {
  content: "" !important;
  visibility: hidden !important;
}
::slotted(a[aria-selected="true"])::after, ::slotted(a[aria-current="true"])::after,::slotted(button[aria-selected="true"])::after, ::slotted(button[aria-current="true"])::after {
  position: absolute !important;
  height: 2px !important;
  left: 0 !important;
  background: #010205 !important;
  right: 0px !important;
  bottom: -6px !important;
  visibility: visible !important;
}
::slotted(a:focus:focus-visible)::before,::slotted(button:focus:focus-visible)::before {
  border: 2px solid #1A44EA !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-inline-end: 16px !important;
}
@media(hover:hover) {
  ::slotted(a)::before, ::slotted(button)::before {
    content: "" !important;
    position: absolute !important;
    inset: -2px -4px !important;
    border-radius: 4px !important;
    z-index: -1 !important;
    transition: background-color var(--p-transition-duration, .24s) ease !important;
  }
  ::slotted(a:hover)::before,::slotted(button:hover)::before {
    -webkit-backdrop-filter: blur(32px) !important;
    backdrop-filter: blur(32px) !important;
    background: rgba(148, 149, 152, .18) !important;
  }
}

.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1rem;
}
.scroller--animated ::slotted(a[aria-selected="true"])::after, .scroller--animated ::slotted(a[aria-current="true"])::after, .scroller--animated ::slotted(button[aria-selected="true"])::after, .scroller--animated ::slotted(button[aria-current="true"])::after {
  transition: visibility 0s linear .4s !important;
}
.bar {
  position: absolute;
  height: 2px;
  left: 0;
  background: #010205;
  width: 0;
  bottom: -2px;
  visibility: visible;
  transition: transform .4s,width .4s;
  animation: keyframes-hide 0s .5s forwards;
}
@keyframes keyframes-hide {
  to {
    visibility: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", weight: semi-bold and theme: light 1`] = `
":host {
  display: block;
  position: relative !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a),::slotted(button) {
  margin: 0 0 4px 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 4px !important;
  background: transparent !important;
  display: inline-block !important;
  position: relative !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: nowrap !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: start !important;
  border: 0 !important;
  color: #010205 !important;
  cursor: pointer !important;
  z-index: 0 !important;
}
::slotted(a)::after,::slotted(button)::after {
  content: "" !important;
  visibility: hidden !important;
}
::slotted(a[aria-selected="true"])::after, ::slotted(a[aria-current="true"])::after,::slotted(button[aria-selected="true"])::after, ::slotted(button[aria-current="true"])::after {
  position: absolute !important;
  height: 2px !important;
  left: 0 !important;
  background: #010205 !important;
  right: 0px !important;
  bottom: -6px !important;
  visibility: visible !important;
}
::slotted(a:focus:focus-visible)::before,::slotted(button:focus:focus-visible)::before {
  border: 2px solid #1A44EA !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-inline-end: 16px !important;
}
@media(hover:hover) {
  ::slotted(a)::before, ::slotted(button)::before {
    content: "" !important;
    position: absolute !important;
    inset: -2px -4px !important;
    border-radius: 4px !important;
    z-index: -1 !important;
    transition: background-color var(--p-transition-duration, .24s) ease !important;
  }
  ::slotted(a:hover)::before,::slotted(button:hover)::before {
    -webkit-backdrop-filter: blur(32px) !important;
    backdrop-filter: blur(32px) !important;
    background: rgba(148, 149, 152, .18) !important;
  }
}

.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
}
.scroller--animated ::slotted(a[aria-selected="true"])::after, .scroller--animated ::slotted(a[aria-current="true"])::after, .scroller--animated ::slotted(button[aria-selected="true"])::after, .scroller--animated ::slotted(button[aria-current="true"])::after {
  transition: visibility 0s linear .4s !important;
}
.bar {
  position: absolute;
  height: 2px;
  left: 0;
  background: #010205;
  width: 0;
  bottom: -2px;
  visibility: visible;
  transition: transform .4s,width .4s;
  animation: keyframes-hide 0s .5s forwards;
}
@keyframes keyframes-hide {
  to {
    visibility: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"small","xs":"medium","s":"small","m":"medium","l":"small","xl":"medium"}, weight: regular and theme: light 1`] = `
":host {
  display: block;
  position: relative !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a),::slotted(button) {
  margin: 0 0 4px 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 4px !important;
  background: transparent !important;
  display: inline-block !important;
  position: relative !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: nowrap !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: start !important;
  border: 0 !important;
  color: #010205 !important;
  cursor: pointer !important;
  z-index: 0 !important;
}
::slotted(a)::after,::slotted(button)::after {
  content: "" !important;
  visibility: hidden !important;
}
::slotted(a[aria-selected="true"])::after, ::slotted(a[aria-current="true"])::after,::slotted(button[aria-selected="true"])::after, ::slotted(button[aria-current="true"])::after {
  position: absolute !important;
  height: 2px !important;
  left: 0 !important;
  background: #010205 !important;
  right: 0px !important;
  bottom: -6px !important;
  visibility: visible !important;
}
::slotted(a:focus:focus-visible)::before,::slotted(button:focus:focus-visible)::before {
  border: 2px solid #1A44EA !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-inline-end: 16px !important;
}
@media(hover:hover) {
  ::slotted(a)::before, ::slotted(button)::before {
    content: "" !important;
    position: absolute !important;
    inset: -2px -4px !important;
    border-radius: 4px !important;
    z-index: -1 !important;
    transition: background-color var(--p-transition-duration, .24s) ease !important;
  }
  ::slotted(a:hover)::before,::slotted(button:hover)::before {
    -webkit-backdrop-filter: blur(32px) !important;
    backdrop-filter: blur(32px) !important;
    background: rgba(148, 149, 152, .18) !important;
  }
}

.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1rem;
}
.scroller--animated ::slotted(a[aria-selected="true"])::after, .scroller--animated ::slotted(a[aria-current="true"])::after, .scroller--animated ::slotted(button[aria-selected="true"])::after, .scroller--animated ::slotted(button[aria-current="true"])::after {
  transition: visibility 0s linear .4s !important;
}
.bar {
  position: absolute;
  height: 2px;
  left: 0;
  background: #010205;
  width: 0;
  bottom: -2px;
  visibility: visible;
  transition: transform .4s,width .4s;
  animation: keyframes-hide 0s .5s forwards;
}
@keyframes keyframes-hide {
  to {
    visibility: hidden;
  }
}
@media(min-width:480px) {
    .scroller {
      font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    }
}

@media(min-width:760px) {
    .scroller {
      font-size: 1rem;
    }
}

@media(min-width:1000px) {
    .scroller {
      font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    }
}

@media(min-width:1300px) {
    .scroller {
      font-size: 1rem;
    }
}

@media(min-width:1760px) {
    .scroller {
      font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    }
}
"
`;
